Updates to Log In Page

--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>nutritious</title>
+    <title>nutritioUS</title>
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
@@ -19,10 +19,12 @@
       <h2>
         Log In
       </h2>
-      <input type="email" placeholder="Email" />
+      <input type="email" placeholder="Email" /><br/>
       <input type="password" placeholder="Password" />
       <br />
-      <a href="\otherpage.html" class="submit">Log In</a>
+      <button onclick="window.location.href='/pagesdflsdjds.html'">
+          Log In
+        </button>
     </div>
   </body>
 </html>
