Updates to Log in Page - Gloria Version

--- a/landing.html
+++ b/landing.html
@@ -19,12 +19,15 @@
       <h2>
         Log In
       </h2>
-      <input type="email" placeholder="Email" /><br/>
-      <input type="password" placeholder="Password" />
+      <input type="email" placeholder="Enter email" /><br/>
+      <input type="password" placeholder="Enter password" />
       <br />
       <button onclick="window.location.href='/pagesdflsdjds.html'">
           Log In
         </button>
+      <br>
+      <a href="/somepage.html">Sign up for an account</a><br>
+      <a href="/somepage.html">Forgot password?</a>
     </div>
   </body>
 </html>
