--- a/html/landing.html
+++ b/html/landing.html
@@ -8,7 +8,7 @@
     <title>nutritioUS</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
