set up connections + cluster

--- a/src/html/landing.html
+++ b/src/html/landing.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../css/style.css" />
 
     <!-- import the webpage's javascript file -->
-    <script src="/script.js" defer></script>
+    <script src="../scripts/landing.js" defer></script>
   </head>
   <body>
     <h1>nutritioUS</h1>
