--- a/Group Page.html
+++ b/Group Page.html
@@ -8,6 +8,7 @@
         <title>Group Page nutritioUS</title>
         <link href="in 30-layout.css"rel="stylesheet"type="text/css">
     </head>
+    <body style="background-color: aqua;">
       <h1 style="text-align: center;"><b>The Cool Kids</b></h1>
       <div class="box">
           <p style="text-align: center;">
