added sign in page

--- a/html/sign-in.html
+++ b/html/sign-in.html
@@ -27,7 +27,7 @@
           Log In
         </button>
       <br>
-      <a href="./somepage.html">Sign up for an account</a><br>
+      <a href="./sign-up.html">Sign up for an account</a><br>
     </div>
   </body>
 </html>
