renamed to index.html

--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -27,7 +27,7 @@
           Sign Up
         </button>
       <br>
-      <a href="./sign-in.html">Already have an account?</a><br>
+      <a href="./index.html">Already have an account?</a><br>
     </div>
   </body>
 </html>
