--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,8 @@
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="../css/style.css" />
 
-    <!-- import the webpage's javascript file -->
-    <script src="../scripts/landing.js" defer></script>
+    <script src="../scripts/log-in.js" defer></script>
+
   </head>
   <body>
 
@@ -20,14 +20,15 @@
       <h2>
         Log In
       </h2>
-      <input type="email" placeholder="Enter email" /><br/>
-      <input type="password" placeholder="Enter password" />
+      <input type="email" id="emailField" placeholder="Enter email" /><br/>
+      <input type="password" id="passField" placeholder="Enter password" />
       <br />
-      <button onclick="window.location.href='/pagesdflsdjds.html'">
+        <button onclick="logIn()">
           Log In
         </button>
       <br>
       <a href="./sign-up.html">Sign up for an account</a><br>
     </div>
+
   </body>
 </html>
