login page finished

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,7 @@
       <h2>
         Log In
       </h2>
+      <div id="passWrong"></div>
       <input type="email" id="emailField" placeholder="Enter email" /><br/>
       <input type="password" id="passField" placeholder="Enter password" />
       <br />
