--- a/html/home.html
+++ b/html/home.html
@@ -7,10 +7,8 @@
 
     <title>nutritioUS</title>
 
-    <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/style.css" />
 
-    <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
 
     <!--import hamburger reponsive navbar-->
@@ -28,10 +26,8 @@
       </div>
       <a href="/home.html">Home</a>
       <a href="/track.html">Track</a>
-      <a href="/credits.html">Groups</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
+      <a href="/group.html">Groups</a>
+      <a class="profile" href="/profile/html">Profile</a>
     </div>
     <div class="box2">
       <h2>
