added user data

--- a/html/home.html
+++ b/html/home.html
@@ -7,7 +7,7 @@
 
     <title>nutritioUS</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <script src="/script.js" defer></script>
 
@@ -87,5 +87,8 @@
         5. Po - 14 Health
       </h3>
     </div>
+    <script>
+      console.log(document.cookie);
+    </script>
   </body>
 </html>
