--- a/html/group.html
+++ b/html/group.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Group Page nutritioUS</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <script src="/script.js" defer></script>
 
