track page update + styling updates for other pages

--- a/html/group.html
+++ b/html/group.html
@@ -17,11 +17,12 @@
       <a href="/home.html">Home</a>
       <a href="/track.html">Track</a>
       <a href="/group.html">Groups</a>
-      <a class="profile" href="/profile/html">Profile</a>
+      <a class="profile" href="/profile.html">Profile</a>
     </div>
   </head>
   <body class="group">
-    <h2 style="text-align: center;font-size:40px"><b>Group: The Cool Kids</b></h2>
+    <h2 style="text-align: center;font-size:40px;color: #a48686"><b>Group: The Cool Kids</b></h2>
+    <h2 style="text-align: center;">Play with your friends</h2>
 
     <input type="search" placeholder="Add a Friend" />
     <!--<h2>
