--- a/html/home.html
+++ b/html/home.html
@@ -27,12 +27,12 @@
       <a href="/home.html">Home</a>
       <a href="/track.html">Track</a>
       <a href="/group.html">Groups</a>
-      <a class="profile" href="/profile/html">Profile</a>
+      <a class="profile" href="/profile.html">Profile</a>
     </div>
     <div class="box2">
       <h2>
         Today's Stats
-      </h2>
+      </h2><br>
       <p>
         Water (fl oz)  <button onclick="move()">+ Add one glass</button>
       </p>
@@ -69,8 +69,8 @@
 
     <div class="leaderboard">
       <h2>
-        Leaderboard
-      </h2>
+        Worldwide Leaderboard
+      </h2><br>
       <h3>
         1. Dipsy - 30 Health
       </h3>
@@ -87,8 +87,5 @@
         5. Po - 14 Health
       </h3>
     </div>
-    <script>
-      console.log(document.cookie);
-    </script>
   </body>
 </html>
