--- a/html/track.html
+++ b/html/track.html
@@ -12,12 +12,14 @@
 
     <div class="navbar" id="myNavbar">
       <div class="logo">
-        <a href="/home.html" class="active">nutritioUS</a>
+        <a href="./home.html" class="active">nutritioUS</a>
       </div>
-      <a href="/home.html">Home</a>
-      <a href="/track.html">Track</a>
-      <a href="/group.html">Groups</a>
-      <a class="profile" href="/profile.html">Profile</a>
+
+      <a href="./home.html">Home</a>
+      <a href="./track.html">Track</a>
+      <a href="./group.html">Groups</a>
+      <a class="profile" href="./profile.html">Profile</a>
+
     </div>
   </head>
   <body>
