--- a/html/profile.html
+++ b/html/profile.html
@@ -7,7 +7,7 @@
 
     <title>nutritioUS</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 
     <script src="/script.js" defer></script>
 
@@ -18,12 +18,14 @@
     />
     <div class="navbar" id="myNavbar">
       <div class="logo">
-        <a href="/home.html" class="active">nutritioUS</a>
+        <a href="./home.html" class="active">nutritioUS</a>
       </div>
-      <a href="/home.html">Home</a>
-      <a href="/track.html">Track</a>
-      <a href="/group.html">Groups</a>
-      <a class="profile" href="/profile.html">Profile</a>
+
+      <a href="./home.html">Home</a>
+      <a href="./track.html">Track</a>
+      <a href="./group.html">Groups</a>
+      <a class="profile" href="./profile.html">Profile</a>
+
     </div>
   </head>
   <body class="profile">
