update healthscore for user

--- a/html/home.html
+++ b/html/home.html
@@ -31,6 +31,16 @@
       <a class="profile" href="./profile.html">Profile</a>
 
     </div>
+
+    <div class="healthscore">
+      <h2>
+        Your Health Score
+      </h2>
+      <h2 id="urHealth">
+        22 <!--Needs to be updated-->
+      </h2>
+    </div>
+
     <div class="box2">
       <h2>
         Today's Stats
