--- a/html/group.html
+++ b/html/group.html
@@ -26,7 +26,15 @@
     <h2 id="groupName" style="text-align: center;font-size:40px;color: #a48686"><b>Group: The Cool Kids</b></h2>
     <h2 style="text-align: center;">Play with your friends</h2>
 
-    <input type="search" placeholder="Add a Friend" />
+    
+    <input type="text" placeholder="Add a Friend" style="text-align: center; margin-right:0px;padding:11px;"/>
+    
+
+    <button 
+      onclick="addFriend()"
+      style="text-align:center;float:center;font-size:larger;margin:20px;margin-right:100px;margin-left:0px;padding:10px;background-color:black;color:white;border-radius:2px;width:100px;">
+      Submit
+    </button>
     <!--<h2>
       +
     </h2>-->
