--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -18,7 +18,7 @@
       <h2>
         Sign Up
       </h2>
-      <form method="post" name="sign-up" id="sign-up-form" action="sign-up.php">
+      <form method="post" name="sign-up-form" id="sign-up-form" action="sign-up.php">
         <input type="name" id="name" placeholder="Full Name" name="Name" />
         <input type="email" id="email" placeholder="Enter email" name="Email" /><br/>
         <input type="password" id="pass" placeholder="Enter password" name="Password" />
