changed index location

--- a/html/profile.html
+++ b/html/profile.html
@@ -82,7 +82,7 @@
         </button>
       
     </div>
-    <button onclick="window.location.href='./index.html'; clear();" style="text-align:center;float:center;font-size:larger;margin:20px;margin-top:40px;padding:5px;background-color:black;color:white;border-radius:2px;width:100px;">
+    <button onclick="window.location.href='../index.html'; clear();" style="text-align:center;float:center;font-size:larger;margin:20px;margin-top:40px;padding:5px;background-color:black;color:white;border-radius:2px;width:100px;">
           Log out
       </button>
 
