--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>nutritioUS</title>
 
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
-    <script src="../scripts/log-in.js" defer></script>
+    <script src="./scripts/log-in.js" defer></script>
 
   </head>
   <body>
@@ -28,7 +28,7 @@
           Log In
         </button>
       <br>
-      <a href="./sign-up.html">Sign up for an account</a><br>
+      <a href="./html/sign-up.html">Sign up for an account</a><br>
     </div>
 
 
