--- a/html/profile.html
+++ b/html/profile.html
@@ -24,7 +24,7 @@
       <a href="./home.html">Home</a>
       <a href="./track.html">Track</a>
       <a href="./group.html">Groups</a>
-      <a class="profile" href="./profile.html">Profile</a>
+      <a class="profile" href="./profile.html"><u>Profile</u></a>
 
     </div>
   </head>
