underlines on nav bar

--- a/html/group.html
+++ b/html/group.html
@@ -17,7 +17,7 @@
 
       <a href="./home.html">Home</a>
       <a href="./track.html">Track</a>
-      <a href="./group.html">Groups</a>
+      <a href="./group.html"><u>Groups</u></a>
       <a class="profile" href="./profile.html">Profile</a>
 
     </div>
