--- a/html/home.html
+++ b/html/home.html
@@ -25,7 +25,7 @@
         <a href="./home.html" class="active">nutritioUS</a>
       </div>
 
-      <a href="./home.html">Home</a>
+      <a href="./home.html"><u>Home</u></a>
       <a href="./track.html">Track</a>
       <a href="./group.html">Groups</a>
       <a class="profile" href="./profile.html">Profile</a>
