--- a/html/track.html
+++ b/html/track.html
@@ -14,7 +14,7 @@
       </div>
 
       <a href="./home.html">Home</a>
-      <a href="./track.html">Track</a>
+      <a href="./track.html"><u>Track</u></a>
       <a href="./group.html">Groups</a>
       <a class="profile" href="./profile.html">Profile</a>
 
