--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
 
     <div class="circle"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
 
     <h1>nutritioUS</h1>
     <div class="box">
