--- a/html/group.html
+++ b/html/group.html
@@ -23,6 +23,11 @@
     </div>
   </head>
   <body class="group">
+
+    <div class="circle4"></div>
+    <div class="circle2"></div>
+    <div class="circle7"></div>
+
     <h2 id="groupName" style="text-align: center;font-size:40px;color: #a48686"><b>Group: The Cool Kids</b></h2>
     <h2 style="text-align: center;">Play with your friends</h2>
 
