--- a/html/home.html
+++ b/html/home.html
@@ -20,6 +20,11 @@
   </head>
 
   <body>
+
+    <div class="circle2"></div>
+    <div class="circle4"></div>
+    <div class="circle6"></div>
+
     <div class="navbar" id="myNavbar">
       <div class="logo">
         <a href="./home.html" class="active">nutritioUS</a>
