--- a/html/profile.html
+++ b/html/profile.html
@@ -29,6 +29,12 @@
     </div>
   </head>
   <body class="profile">
+
+    <div class="circle"></div>
+    <div class="circle3"></div>
+    <div class="circle5"></div>
+    <div class="circle7"></div>
+
     <h2 id="userName" style="text-align: center;font-size:40px;color: #a48686">
       <u>Anne Boat</u>
     </h2>
