--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <div class="circle3"></div>
 
     <h1>nutritioUS</h1>
+
+    <h2>Making eating healthy more fun than ever before</h2>
+
     <div class="box">
       <h2>
         Log In
