--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <h1>nutritioUS</h1>
 
-    <h2>Making eating healthy more fun than ever before</h2>
+    <h2 class="slogan">Making eating healthy more fun than ever before!</h2>
 
     <div class="box">
       <h2>
