--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -32,7 +32,7 @@
           Sign Up
       </button>
       <br>
-      <a href="./index.html">Already have an account?</a><br>
+      <a href="../index.html">Already have an account?</a><br>
     </div>
 
   </body>
